Attempt a more sophisticated naming strategy
1. Default to a simple name if no annotations
2. If there is a group, provid ean english-sensible name using camelized
   group names
