# internal/pets/ent/http/response.go
@@ -83,105 +83,48 @@ func Unauthorized(w http.ResponseWriter, msg interface{}) (int, error) {
 }
 
 type (
-	// Badge2492344257View represents the data serialized for the following serialization group combinations:
+	// BadgeView represents the data serialized for the following serialization group combinations:
 	// []
 	// [pet:list pet:read]
 	// [pet:read]
 	// [pet:list]
-	Badge2492344257View struct {
+	BadgeView struct {
 		ID       uint32         `json:"id,omitempty"`
 		Color    badge.Color    `json:"color,omitempty"`
 		Material badge.Material `json:"material,omitempty"`
 	}
-	Badge2492344257Views []*Badge2492344257View
+	BadgeViews []*BadgeView
 )
 
-func NewBadge2492344257View(e *ent.Badge) *Badge2492344257View {
+func NewBadgeView(e *ent.Badge) *BadgeView {
 	if e == nil {
 		return nil
 	}
-	return &Badge2492344257View{
+	return &BadgeView{
 		ID:       e.ID,
 		Color:    e.Color,
 		Material: e.Material,
 	}
 }
 
-func NewBadge2492344257Views(es []*ent.Badge) Badge2492344257Views {
+func NewBadgeViews(es []*ent.Badge) BadgeViews {
 	if len(es) == 0 {
 		return nil
 	}
-	r := make(Badge2492344257Views, len(es))
+	r := make(BadgeViews, len(es))
 	for i, e := range es {
-		r[i] = NewBadge2492344257View(e)
+		r[i] = NewBadgeView(e)
 	}
 	return r
 }
 
 type (
-	// Pet3217017920View represents the data serialized for the following serialization group combinations:
+	// PetView represents the data serialized for the following serialization group combinations:
+	// []
 	// [pet:list pet:read]
 	// [pet:read]
-	Pet3217017920View struct {
-		ID         int                      `json:"id,omitempty"`
-		Height     int                      `json:"height,omitempty"`
-		Weight     float64                  `json:"weight,omitempty"`
-		Castrated  bool                     `json:"castrated,omitempty"`
-		Name       string                   `json:"name,omitempty"`
-		Birthday   time.Time                `json:"birthday,omitempty"`
-		Nicknames  []string                 `json:"nicknames,omitempty"`
-		Sex        pet.Sex                  `json:"sex,omitempty"`
-		Chip       uuid.UUID                `json:"chip,omitempty"`
-		Badge      *Badge2492344257View     `json:"badge,omitempty"`
-		Protege    *Pet340207500View        `json:"protege,omitempty"`
-		Spouse     *Pet340207500View        `json:"spouse,omitempty"`
-		Toys       Toy36157710Views         `json:"toys,omitempty"`
-		Parent     *Pet340207500View        `json:"parent,omitempty"`
-		PlayGroups PlayGroup3432834655Views `json:"play_groups,omitempty"`
-		Friends    Pet340207500Views        `json:"friends,omitempty"`
-	}
-	Pet3217017920Views []*Pet3217017920View
-)
-
-func NewPet3217017920View(e *ent.Pet) *Pet3217017920View {
-	if e == nil {
-		return nil
-	}
-	return &Pet3217017920View{
-		ID:         e.ID,
-		Height:     e.Height,
-		Weight:     e.Weight,
-		Castrated:  e.Castrated,
-		Name:       e.Name,
-		Birthday:   e.Birthday,
-		Nicknames:  e.Nicknames,
-		Sex:        e.Sex,
-		Chip:       e.Chip,
-		Badge:      NewBadge2492344257View(e.Edges.Badge),
-		Protege:    NewPet340207500View(e.Edges.Protege),
-		Spouse:     NewPet340207500View(e.Edges.Spouse),
-		Toys:       NewToy36157710Views(e.Edges.Toys),
-		Parent:     NewPet340207500View(e.Edges.Parent),
-		PlayGroups: NewPlayGroup3432834655Views(e.Edges.PlayGroups),
-		Friends:    NewPet340207500Views(e.Edges.Friends),
-	}
-}
-
-func NewPet3217017920Views(es []*ent.Pet) Pet3217017920Views {
-	if len(es) == 0 {
-		return nil
-	}
-	r := make(Pet3217017920Views, len(es))
-	for i, e := range es {
-		r[i] = NewPet3217017920View(e)
-	}
-	return r
-}
-
-type (
-	// Pet340207500View represents the data serialized for the following serialization group combinations:
-	// []
-	Pet340207500View struct {
+	// [pet:list]
+	PetView struct {
 		ID        int       `json:"id,omitempty"`
 		Height    int       `json:"height,omitempty"`
 		Weight    float64   `json:"weight,omitempty"`
@@ -192,14 +135,14 @@ type (
 		Sex       pet.Sex   `json:"sex,omitempty"`
 		Chip      uuid.UUID `json:"chip,omitempty"`
 	}
-	Pet340207500Views []*Pet340207500View
+	PetViews []*PetView
 )
 
-func NewPet340207500View(e *ent.Pet) *Pet340207500View {
+func NewPetView(e *ent.Pet) *PetView {
 	if e == nil {
 		return nil
 	}
-	return &Pet340207500View{
+	return &PetView{
 		ID:        e.ID,
 		Height:    e.Height,
 		Weight:    e.Weight,
@@ -212,74 +155,37 @@ func NewPet340207500View(e *ent.Pet) *Pet340207500View {
 	}
 }
 
-func NewPet340207500Views(es []*ent.Pet) Pet340207500Views {
+func NewPetViews(es []*ent.Pet) PetViews {
 	if len(es) == 0 {
 		return nil
 	}
-	r := make(Pet340207500Views, len(es))
+	r := make(PetViews, len(es))
 	for i, e := range es {
-		r[i] = NewPet340207500View(e)
+		r[i] = NewPetView(e)
 	}
 	return r
 }
 
 type (
-	// Pet45794832View represents the data serialized for the following serialization group combinations:
-	// [pet:list]
-	Pet45794832View struct {
-		ID    int                  `json:"id,omitempty"`
-		Name  string               `json:"name,omitempty"`
-		Sex   pet.Sex              `json:"sex,omitempty"`
-		Chip  uuid.UUID            `json:"chip,omitempty"`
-		Badge *Badge2492344257View `json:"badge,omitempty"`
-	}
-	Pet45794832Views []*Pet45794832View
-)
-
-func NewPet45794832View(e *ent.Pet) *Pet45794832View {
-	if e == nil {
-		return nil
-	}
-	return &Pet45794832View{
-		ID:    e.ID,
-		Name:  e.Name,
-		Sex:   e.Sex,
-		Chip:  e.Chip,
-		Badge: NewBadge2492344257View(e.Edges.Badge),
-	}
-}
-
-func NewPet45794832Views(es []*ent.Pet) Pet45794832Views {
-	if len(es) == 0 {
-		return nil
-	}
-	r := make(Pet45794832Views, len(es))
-	for i, e := range es {
-		r[i] = NewPet45794832View(e)
-	}
-	return r
-}
-
-type (
-	// PlayGroup3432834655View represents the data serialized for the following serialization group combinations:
+	// PlayGroupView represents the data serialized for the following serialization group combinations:
 	// []
 	// [pet:list pet:read]
 	// [pet:read]
 	// [pet:list]
-	PlayGroup3432834655View struct {
+	PlayGroupView struct {
 		ID          int               `json:"id,omitempty"`
 		Title       string            `json:"title,omitempty"`
 		Description string            `json:"description,omitempty"`
 		Weekday     playgroup.Weekday `json:"weekday,omitempty"`
 	}
-	PlayGroup3432834655Views []*PlayGroup3432834655View
+	PlayGroupViews []*PlayGroupView
 )
 
-func NewPlayGroup3432834655View(e *ent.PlayGroup) *PlayGroup3432834655View {
+func NewPlayGroupView(e *ent.PlayGroup) *PlayGroupView {
 	if e == nil {
 		return nil
 	}
-	return &PlayGroup3432834655View{
+	return &PlayGroupView{
 		ID:          e.ID,
 		Title:       e.Title,
 		Description: e.Description,
@@ -287,37 +193,37 @@ func NewPlayGroup3432834655View(e *ent.PlayGroup) *PlayGroup3432834655View {
 	}
 }
 
-func NewPlayGroup3432834655Views(es []*ent.PlayGroup) PlayGroup3432834655Views {
+func NewPlayGroupViews(es []*ent.PlayGroup) PlayGroupViews {
 	if len(es) == 0 {
 		return nil
 	}
-	r := make(PlayGroup3432834655Views, len(es))
+	r := make(PlayGroupViews, len(es))
 	for i, e := range es {
-		r[i] = NewPlayGroup3432834655View(e)
+		r[i] = NewPlayGroupView(e)
 	}
 	return r
 }
 
 type (
-	// Toy36157710View represents the data serialized for the following serialization group combinations:
+	// ToyView represents the data serialized for the following serialization group combinations:
 	// []
 	// [pet:list pet:read]
 	// [pet:read]
 	// [pet:list]
-	Toy36157710View struct {
+	ToyView struct {
 		ID       uuid.UUID    `json:"id,omitempty"`
 		Color    toy.Color    `json:"color,omitempty"`
 		Material toy.Material `json:"material,omitempty"`
 		Title    string       `json:"title,omitempty"`
 	}
-	Toy36157710Views []*Toy36157710View
+	ToyViews []*ToyView
 )
 
-func NewToy36157710View(e *ent.Toy) *Toy36157710View {
+func NewToyView(e *ent.Toy) *ToyView {
 	if e == nil {
 		return nil
 	}
-	return &Toy36157710View{
+	return &ToyView{
 		ID:       e.ID,
 		Color:    e.Color,
 		Material: e.Material,
@@ -325,13 +231,13 @@ func NewToy36157710View(e *ent.Toy) *Toy36157710View {
 	}
 }
 
-func NewToy36157710Views(es []*ent.Toy) Toy36157710Views {
+func NewToyViews(es []*ent.Toy) ToyViews {
 	if len(es) == 0 {
 		return nil
 	}
-	r := make(Toy36157710Views, len(es))
+	r := make(ToyViews, len(es))
 	for i, e := range es {
-		r[i] = NewToy36157710View(e)
+		r[i] = NewToyView(e)
 	}
 	return r
 }
